Thu Nov  3 04:15:20 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * examples/arch/PingPong:
        * examples/arch/PingPong/arch/ciao:
        * examples/arch/PingPong/models/PingPong.xme:

          Relocated the PingPong example from the test directory.

        * tests/cuts/arch/PingPong:
        * tests/cuts/arch/PingPong/arch:
        * tests/cuts/arch/PingPong/arch/ciao:
        * tests/cuts/arch/PingPong/arch/ciao/PingComponent.idl:
        * tests/cuts/arch/PingPong/arch/ciao/PingComponent.mpc:
        * tests/cuts/arch/PingPong/arch/ciao/PingPong.idl:
        * tests/cuts/arch/PingPong/arch/ciao/PingPong.mpc:
        * tests/cuts/arch/PingPong/arch/ciao/PingPong.mwc:
        * tests/cuts/arch/PingPong/arch/ciao/PingPong_Events.idl:
        * tests/cuts/arch/PingPong/arch/ciao/PingPong_Events.mpc:
        * tests/cuts/arch/PingPong/arch/ciao/PingPong_PingComponentImpl.h:
        * tests/cuts/arch/PingPong/arch/ciao/PingPong_PingComponentImpl.cpp:
        * tests/cuts/arch/PingPong/arch/ciao/PingPong_PingComponentImpl.mpc:
        * tests/cuts/arch/PingPong/arch/ciao/PingPong_PongComponentImpl.h:
        * tests/cuts/arch/PingPong/arch/ciao/PingPong_PongComponentImpl.cpp:
        * tests/cuts/arch/PingPong/arch/ciao/PingPong_PongComponentImpl.mpc:
        * tests/cuts/arch/PingPong/arch/ciao/PongComponent.idl:
        * tests/cuts/arch/PingPong/arch/ciao/PongComponent.mpc:
        * tests/cuts/arch/PingPong/arch/ciao/descriptors:
        * tests/cuts/arch/PingPong/arch/ciao/descriptors/PingPong.cdd:
        * tests/cuts/arch/PingPong/arch/ciao/descriptors/PingPong.cdp:
        * tests/cuts/arch/PingPong/arch/ciao/descriptors/PingPong_DomainQoS.cdd:
        * tests/cuts/arch/PingPong/arch/ciao/descriptors/PingPong_DomainQoS.cdp:
        * tests/cuts/arch/PingPong/arch/ciao/descriptors/run_test.pl:
        * tests/cuts/arch/PingPong/arch/opensplice:
        * tests/cuts/arch/PingPong/arch/opensplice/PingComponent.idl: