@@ -6,7 +6,8 @@
 // CUTS_Node_Daemon_Options
 //
 CUTS_Node_Daemon_Options::CUTS_Node_Daemon_Options (void)
-: disable_server_ (false)
+: disable_server_ (false),
+  allow_multiple_ (false)
 {
 
 }
