@@ -48,16 +48,6 @@ int main (int argc, char * argv [])
 
   try
   {
-    // We only allow one instance of the daemon to run at a time. This
-    // way we don't have any confusion as to which one we are talking to.
-    ACE_Process_Mutex process_lock ("cutsnode_d");
-    ACE_Guard <ACE_Process_Mutex> guard (process_lock, 0);
-
-    if (0 == guard.locked ())
-      ACE_ERROR_RETURN ((LM_ERROR,
-                        "%T (%t) - %M - cutsnode_d is already active\n"),
-                        1);
-
     // Initialize the logging priorities.
     u_long default_mask =
       LM_EMERGENCY | LM_ALERT | LM_CRITICAL | LM_ERROR | LM_WARNING | LM_NOTICE;
@@ -68,7 +58,7 @@ int main (int argc, char * argv [])
     register_sighandler ();
 
     // Run the node daemon
-    retval = CUTS_NODE_DAEMON_APP->run_main (argc, argv);
+    retval = 0 != CUTS_NODE_DAEMON_APP->run_main (argc, argv) ? 1 : 0;
   }
   catch (...)
   {
